@@ -1,21 +1,23 @@
 /*                     __                                               *\
 **     ________ ___   / /  ___     Scala API                            **
-**    / __/ __// _ | / /  / _ |    (c) 2006-2009, LAMP/EPFL             **
+**    / __/ __// _ | / /  / _ |    (c) 2006-2010, LAMP/EPFL             **
 **  __\ \/ /__/ __ |/ /__/ __ |    http://scala-lang.org/               **
 ** /____/\___/_/ |_/____/_/ | |                                         **
 **                          |/                                          **
 \*                                                                      */
 
-// $Id: BoxesRunTime.java 16894 2009-01-13 13:09:41Z cunei $
 
 
 package scala.runtime;
 
+import java.io.*;
+import scala.math.ScalaNumber;
+
 /** An object (static class) that defines methods used for creating,
   * reverting, and calculating with, boxed values. There are four classes
   * of methods in this object:
-  *   - High-performance value boxing methods that feed from a pre-
-  *     computed map of instances for the most common instanciations.
+  *   - Convenience boxing methods which call the static valueOf method
+  *     on the boxed class, thus utilizing the JVM boxing cache.
   *   - Convenience unboxing methods returning default value on null.
   *   - The generalised comparison method to be used when an object may
   *     be a boxed value.
@@ -25,240 +27,247 @@ package scala.runtime;
   * @author  Martin Odersky
   * @contributor Stepan Koltsov
   * @version 2.0 */
-public class BoxesRunTime {
-
+public final class BoxesRunTime
+{    
     private static final int CHAR = 0, BYTE = 1, SHORT = 2, INT = 3, LONG = 4, FLOAT = 5, DOUBLE = 6, OTHER = 7;
     
     private static int typeCode(Object a) {
-        if (a instanceof Integer) return INT;
-        if (a instanceof Character) return CHAR;
-        if (a instanceof Long) return LONG;
-        if (a instanceof Double) return DOUBLE;
-        if (a instanceof Float) return FLOAT;
-        if (a instanceof Byte) return BYTE;
-        if (a instanceof Short) return SHORT;
+        if (a instanceof java.lang.Integer) return INT;
+        if (a instanceof java.lang.Byte) return BYTE;
+        if (a instanceof java.lang.Character) return CHAR;
+        if (a instanceof java.lang.Long) return LONG;
+        if (a instanceof java.lang.Double) return DOUBLE;
+        if (a instanceof java.lang.Short) return SHORT;
+        if (a instanceof java.lang.Float) return FLOAT;
         return OTHER;
+    }
+    
+    private static String boxDescription(Object a) {
+      return "" + a.getClass().getSimpleName() + "(" + a + ")";
     }
         
 /* BOXING ... BOXING ... BOXING ... BOXING ... BOXING ... BOXING ... BOXING ... BOXING */
-    
-    private static int charLowBound = 0;
-    private static int charUpBound = 255;
-    private static Character[] charCache = new Character[charUpBound - charLowBound + 1];
-    
-    private static int byteLowBound = -128;
-    private static int byteUpBound = 127;
-    private static Byte[] byteCache = new Byte[byteUpBound - byteLowBound + 1];
-    
-    private static int shortLowBound = -128;
-    private static int shortUpBound = 127;
-    private static Short[] shortCache = new Short[shortUpBound - shortLowBound + 1];
-    
-    private static int intLowBound = -128;
-    private static int intUpBound = 1024;
-    private static Integer[] intCache = new Integer[intUpBound - intLowBound + 1];
-    
-    private static int longLowBound = -128;
-    private static int longUpBound = 1024;
-    private static Long[] longCache = new Long[longUpBound - longLowBound + 1];
-    
-    static {
-        int idx = 0;
-        while (idx <= charUpBound - charLowBound) {
-            charCache[idx] = new Character((char)(idx + charLowBound));
-            idx = idx + 1;
-        }
-        idx = 0;
-        while (idx <= byteUpBound - byteLowBound) {
-            byteCache[idx] = new Byte((byte)(idx + byteLowBound));
-            idx = idx + 1;
-        }
-        idx = 0;
-        while (idx <= shortUpBound - shortLowBound) {
-            shortCache[idx] = new Short((short)(idx + shortLowBound));
-            idx = idx + 1;
-        }
-        idx = 0;
-        while (idx <= intUpBound - intLowBound) {
-            intCache[idx] = new Integer((int)(idx + intLowBound));
-            idx = idx + 1;
-        }
-        idx = 0;
-        while (idx <= longUpBound - longLowBound) {
-            longCache[idx] = new Long((long)(idx + longLowBound));
-            idx = idx + 1;
-        }
+
+    public static java.lang.Boolean boxToBoolean(boolean b) {
+        return java.lang.Boolean.valueOf(b);
     }
     
-    public static Boolean boxToBoolean(boolean b) {
-        return b ? Boolean.TRUE : Boolean.FALSE;
+    public static java.lang.Character boxToCharacter(char c) {
+        return java.lang.Character.valueOf(c);
     }
     
-    public static Character boxToCharacter(char c) {
-        if (c >= charLowBound && c <= charUpBound)
-            return charCache[(int)c - charLowBound];
-        return new Character(c); 
+    public static java.lang.Byte boxToByte(byte b) {
+        return java.lang.Byte.valueOf(b);
     }
     
-    public static Byte boxToByte(byte b) {
-        if (b >= byteLowBound && b <= byteUpBound)
-            return byteCache[(int)b - byteLowBound];
-        return new Byte(b); 
+    public static java.lang.Short boxToShort(short s) {
+        return java.lang.Short.valueOf(s);
     }
     
-    public static Short boxToShort(short s) {
-        if (s >= shortLowBound && s <= shortUpBound)
-            return shortCache[(int)s - shortLowBound];
-        return new Short(s); 
+    public static java.lang.Integer boxToInteger(int i) {
+        return java.lang.Integer.valueOf(i);
     }
     
-    public static Integer boxToInteger(int i) {
-        if (i >= intLowBound && i <= intUpBound)
-            return intCache[(int)i - intLowBound];
-        return new Integer(i); 
+    public static java.lang.Long boxToLong(long l) {
+        return java.lang.Long.valueOf(l);
     }
     
-    public static Long boxToLong(long l) {
-        if (l >= longLowBound && l <= longUpBound)
-            return longCache[(int)l - longLowBound];
-        return new Long(l);
+    public static java.lang.Float boxToFloat(float f) {
+        return java.lang.Float.valueOf(f);
     }
     
-    public static Float boxToFloat(float f) {
-        return new Float(f);
-    }
-    
-    public static Double boxToDouble(double d) {
-        return new Double(d);
+    public static java.lang.Double boxToDouble(double d) {
+        return java.lang.Double.valueOf(d);
     }
         
 /* UNBOXING ... UNBOXING ... UNBOXING ... UNBOXING ... UNBOXING ... UNBOXING ... UNBOXING */
     
     public static boolean unboxToBoolean(Object b) {
-        return b == null ? false : ((Boolean)b).booleanValue();
+        return b == null ? false : ((java.lang.Boolean)b).booleanValue();
     }
     
     public static char unboxToChar(Object c) {
-        return c == null ? 0 : ((Character)c).charValue();
+        return c == null ? 0 : ((java.lang.Character)c).charValue();
     }
     
     public static byte unboxToByte(Object b) {
-        return b == null ? 0 : ((Byte)b).byteValue();
+        return b == null ? 0 : ((java.lang.Byte)b).byteValue();
     }
     
     public static short unboxToShort(Object s) {
-        return s == null ? 0 : ((Short)s).shortValue();
+        return s == null ? 0 : ((java.lang.Short)s).shortValue();
     }
 
     public static int unboxToInt(Object i) {
-        return i == null ? 0 : ((Integer)i).intValue();
+        return i == null ? 0 : ((java.lang.Integer)i).intValue();
     }
     
     public static long unboxToLong(Object l) {
-        return l == null ? 0 : ((Long)l).longValue();
+        return l == null ? 0 : ((java.lang.Long)l).longValue();
     }
     
     public static float unboxToFloat(Object f) {
-        return f == null ? 0.0f : ((Float)f).floatValue();
+        return f == null ? 0.0f : ((java.lang.Float)f).floatValue();
     }
     
     public static double unboxToDouble(Object d) {
-        return d == null ? 0.0d : ((Double)d).doubleValue();
-    }
-    
-    /*
-    public static boolean unboxToBoolean(Object b) {
-        if (b == null)
-          throw new ClassCastException("null is no Boolean value");
-        return ((Boolean)b).booleanValue();
-    }
-    
-    public static char unboxToChar(Object c) {
-        if (c == null)
-          throw new ClassCastException("null is no Char value");
-        return ((Character)c).charValue();
-    }
-    
-    public static byte unboxToByte(Object b) {
-        if (b == null)
-          throw new ClassCastException("null is no Byte value");
-        return ((Byte)b).byteValue();
-    }
-    
-    public static short unboxToShort(Object s) {
-        if (s == null)
-          throw new ClassCastException("null is no Short value");
-        return ((Short)s).shortValue();
+        return d == null ? 0.0d : ((java.lang.Double)d).doubleValue();
     }
 
-    public static int unboxToInt(Object i) {
-        if (i == null)
-          throw new ClassCastException("null is no Int value");
-        return ((Integer)i).intValue();
+    /* COMPARISON ... COMPARISON ... COMPARISON ... COMPARISON ... COMPARISON ... COMPARISON */
+    
+    private static int eqTypeCode(Number a) {
+        if ((a instanceof java.lang.Integer) || (a instanceof java.lang.Byte)) return INT;
+        if (a instanceof java.lang.Long) return LONG;
+        if (a instanceof java.lang.Double) return DOUBLE;
+        if (a instanceof java.lang.Short) return INT;
+        if (a instanceof java.lang.Float) return FLOAT;
+        return OTHER;
     }
     
-    public static long unboxToLong(Object l) {
-        if (l == null)
-          throw new ClassCastException("null is no Long value");
-        return ((Long)l).longValue();
+    public static boolean equals(Object x, Object y) {      
+        if (x == y) return true;
+        return equals2(x, y);
     }
-    
-    public static float unboxToFloat(Object f) {
-        if (f == null)
-          throw new ClassCastException("null is no Float value");
-        return ((Float)f).floatValue();
-    }
-    
-    public static double unboxToDouble(Object d) {
-        if (d == null)
-          throw new ClassCastException("null is no Double value");
-        return ((Double)d).doubleValue();
-    }
-    */
-        
-/* COMPARISON ... COMPARISON ... COMPARISON ... COMPARISON ... COMPARISON ... COMPARISON */
 
-    /** A rich implementation of the <code>equals</code> method that overrides the
-      * default equals because Java's boxed primitives are utterly broken. This equals
-      * is inserted instead of a normal equals by the Scala compiler (in the
-      * ICode phase, method <code>genEqEqPrimitive</code>) only when either
-      * side of the comparison is a subclass of <code>AnyVal</code>, of
-      * <code>java.lang.Number</code>, of <code>java.lang.Character</code> or
-      * is exactly <code>Any</code> or <code>AnyRef</code>. */
-    public static boolean equals(Object a, Object b) {
-        if (a == null || b == null)
-            return a == b;
-        if (a.equals(b))
-            return true;
-        if (a instanceof Number || a instanceof Character || b instanceof Number || b instanceof Character) {
-            int acode = typeCode(a);
-            int bcode = typeCode(b);
-            int maxcode = (acode < bcode) ? bcode : acode;
-            if (maxcode <= INT) {
-                int aa = (acode == CHAR) ? ((Character) a).charValue() : ((Number) a).intValue();
-                int bb = (bcode == CHAR) ? ((Character) b).charValue() : ((Number) b).intValue();
-                return aa == bb;
-            }
-            if (maxcode <= LONG) {
-                long aa = (acode == CHAR) ? ((Character) a).charValue() : ((Number) a).longValue();
-                long bb = (bcode == CHAR) ? ((Character) b).charValue() : ((Number) b).longValue();
-                return aa == bb;
-            }
-            if (maxcode <= FLOAT) {
-                float aa = (acode == CHAR) ? ((Character) a).charValue() : ((Number) a).floatValue();
-                float bb = (bcode == CHAR) ? ((Character) b).charValue() : ((Number) b).floatValue();
-                return aa == bb;
-            }
-            if (maxcode <= DOUBLE) {
-                double aa = (acode == CHAR) ? ((Character) a).charValue() : ((Number) a).doubleValue();
-                double bb = (bcode == CHAR) ? ((Character) b).charValue() : ((Number) b).doubleValue();
-                return aa == bb;
-            }
-			return b.equals(a);
+    /** Since all applicable logic has to be present in the equals method of a ScalaNumber
+     *  in any case, we dispatch to it as soon as we spot one on either side.
+     */
+    public static boolean equals2(Object x, Object y) {
+        if (x instanceof java.lang.Number)
+            return equalsNumObject((java.lang.Number)x, y);
+        if (x instanceof java.lang.Character)
+            return equalsCharObject((java.lang.Character)x, y);
+        if (x == null)
+            return y == null;
+          
+        return x.equals(y);
+    }
+    
+    public static boolean equalsNumObject(java.lang.Number xn, Object y) {
+        if (y instanceof java.lang.Number)
+            return equalsNumNum(xn, (java.lang.Number)y);
+        if (y instanceof java.lang.Character)
+            return equalsNumChar(xn, (java.lang.Character)y);
+        if (xn == null)
+            return y == null;
+          
+        return xn.equals(y);
+    }
+    
+    public static boolean equalsNumNum(java.lang.Number xn, java.lang.Number yn) {
+        int xcode = eqTypeCode(xn);
+        int ycode = eqTypeCode(yn);
+        switch (ycode > xcode ? ycode : xcode) {
+        case INT:
+            return xn.intValue() == yn.intValue();
+        case LONG:
+            return xn.longValue() == yn.longValue();
+        case FLOAT:
+            return xn.floatValue() == yn.floatValue();
+        case DOUBLE:
+            return xn.doubleValue() == yn.doubleValue();
+        default:
+            if ((yn instanceof ScalaNumber) && !(xn instanceof ScalaNumber))
+                return yn.equals(xn);
         }
-        return false;
+        if (xn == null)
+            return yn == null;
+            
+        return xn.equals(yn);
     }
-        
+    
+    public static boolean equalsCharObject(java.lang.Character xc, Object y) {
+        if (y instanceof java.lang.Character)
+            return xc.charValue() == ((java.lang.Character)y).charValue();
+        if (y instanceof java.lang.Number)
+            return equalsNumChar((java.lang.Number)y, xc);
+        if (xc == null)
+            return y == null;
+             
+        return xc.equals(y);
+    }
+
+    private static boolean equalsNumChar(java.lang.Number xn, java.lang.Character yc) {
+        char ch = yc.charValue();
+        switch (eqTypeCode(xn)) {
+        case INT:
+            return xn.intValue() == ch;
+        case LONG:
+            return xn.longValue() == ch;
+        case FLOAT:
+            return xn.floatValue() == ch;
+        case DOUBLE:
+            return xn.doubleValue() == ch;
+        default:
+            if (xn == null)
+                return yc == null;
+                
+            return xn.equals(yc);
+        }
+    }
+    
+    /** Hashcode algorithm is driven by the requirements imposed
+     *  by primitive equality semantics, namely that equal objects
+     *  have equal hashCodes.  The first priority are the integral/char
+     *  types, which already have the same hashCodes for the same
+     *  values except for Long.  So Long's hashCode is altered to
+     *  conform to Int's for all values in Int's range.
+     *
+     *  Float is problematic because it's far too small to hold
+     *  all the Ints, so for instance Int.MaxValue.toFloat claims
+     *  to be == to each of the largest 64 Ints.  There is no way
+     *  to preserve equals/hashCode alignment without compromising
+     *  the hashCode distribution, so Floats are only guaranteed
+     *  to have the same hashCode for whole Floats in the range
+     *  Short.MinValue to Short.MaxValue (2^16 total.)
+     *
+     *  Double has its hashCode altered to match the entire Int range,
+     *  but is not guaranteed beyond that.  (But could/should it be?
+     *  The hashCode is only 32 bits so this is a more tractable
+     *  issue than Float's, but it might be better simply to exclude it.)
+     *
+     *  Note: BigInt and BigDecimal, being arbitrary precision, could
+     *  be made consistent with all other types for the Int range, but
+     *  as yet have not.
+     *
+     *  Note: Among primitives, Float.NaN != Float.NaN, but the boxed
+     *  verisons are equal.  This still needs reconciliation.
+     */
+    public static int hashFromLong(java.lang.Long n) {
+        int iv = n.intValue();
+        if (iv == n.longValue()) return iv;
+        else return n.hashCode();
+    }
+    public static int hashFromDouble(java.lang.Double n) {
+        int iv = n.intValue();    
+        double dv = n.doubleValue();
+        if (iv == dv) return iv;
+  
+        long lv = n.longValue();
+        if (lv == dv) return java.lang.Long.valueOf(lv).hashCode();
+        else return n.hashCode();
+    }
+    public static int hashFromFloat(java.lang.Float n) {
+        int iv = n.intValue();    
+        float fv = n.floatValue();
+        if (iv == fv) return iv;
+
+        long lv = n.longValue();
+        if (lv == fv) return java.lang.Long.valueOf(lv).hashCode();
+        else return n.hashCode();
+    }
+    public static int hashFromNumber(java.lang.Number n) {
+      if (n instanceof java.lang.Long) return hashFromLong((java.lang.Long)n);
+      else if (n instanceof java.lang.Double) return hashFromDouble((java.lang.Double)n);
+      else if (n instanceof java.lang.Float) return hashFromFloat((java.lang.Float)n);
+      else return n.hashCode();
+    }
+    public static int hashFromObject(Object a) {
+      if (a instanceof Number) return hashFromNumber((Number)a);
+      else return a.hashCode();
+    }
+    
 /* OPERATORS ... OPERATORS ... OPERATORS ... OPERATORS ... OPERATORS ... OPERATORS ... OPERATORS ... OPERATORS */
         
     /** arg1 + arg2 */
@@ -267,23 +276,23 @@ public class BoxesRunTime {
         int code2 = typeCode(arg2);
         int maxcode = (code1 < code2) ? code2 : code1;
         if (maxcode <= INT) {
-            int val1 = (code1 == CHAR) ? ((Character) arg1).charValue() : ((Number) arg1).intValue();
-            int val2 = (code2 == CHAR) ? ((Character) arg2).charValue() : ((Number) arg2).intValue();
+            int val1 = (code1 == CHAR) ? ((java.lang.Character) arg1).charValue() : ((java.lang.Number) arg1).intValue();
+            int val2 = (code2 == CHAR) ? ((java.lang.Character) arg2).charValue() : ((java.lang.Number) arg2).intValue();
             return boxToInteger(val1 + val2);
         }
         if (maxcode <= LONG) {
-            long val1 = (code1 == CHAR) ? ((Character) arg1).charValue() : ((Number) arg1).longValue();
-            long val2 = (code2 == CHAR) ? ((Character) arg2).charValue() : ((Number) arg2).longValue();
+            long val1 = (code1 == CHAR) ? ((java.lang.Character) arg1).charValue() : ((java.lang.Number) arg1).longValue();
+            long val2 = (code2 == CHAR) ? ((java.lang.Character) arg2).charValue() : ((java.lang.Number) arg2).longValue();
             return boxToLong(val1 + val2);
         }
         if (maxcode <= FLOAT) {
-            float val1 = (code1 == CHAR) ? ((Character) arg1).charValue() : ((Number) arg1).floatValue();
-            float val2 = (code2 == CHAR) ? ((Character) arg2).charValue() : ((Number) arg2).floatValue();
+            float val1 = (code1 == CHAR) ? ((java.lang.Character) arg1).charValue() : ((java.lang.Number) arg1).floatValue();
+            float val2 = (code2 == CHAR) ? ((java.lang.Character) arg2).charValue() : ((java.lang.Number) arg2).floatValue();
             return boxToFloat(val1 + val2);
         }
         if (maxcode <= DOUBLE) {
-            double val1 = (code1 == CHAR) ? ((Character) arg1).charValue() : ((Number) arg1).doubleValue();
-            double val2 = (code2 == CHAR) ? ((Character) arg2).charValue() : ((Number) arg2).doubleValue();
+            double val1 = (code1 == CHAR) ? ((java.lang.Character) arg1).charValue() : ((java.lang.Number) arg1).doubleValue();
+            double val2 = (code2 == CHAR) ? ((java.lang.Character) arg2).charValue() : ((java.lang.Number) arg2).doubleValue();
             return boxToDouble(val1 + val2);
         }
         throw new NoSuchMethodException();
@@ -295,23 +304,23 @@ public class BoxesRunTime {
         int code2 = typeCode(arg2);
         int maxcode = (code1 < code2) ? code2 : code1;
         if (maxcode <= INT) {
-            int val1 = (code1 == CHAR) ? ((Character) arg1).charValue() : ((Number) arg1).intValue();
-            int val2 = (code2 == CHAR) ? ((Character) arg2).charValue() : ((Number) arg2).intValue();
+            int val1 = (code1 == CHAR) ? ((java.lang.Character) arg1).charValue() : ((java.lang.Number) arg1).intValue();
+            int val2 = (code2 == CHAR) ? ((java.lang.Character) arg2).charValue() : ((java.lang.Number) arg2).intValue();
             return boxToInteger(val1 - val2);
         }
         if (maxcode <= LONG) {
-            long val1 = (code1 == CHAR) ? ((Character) arg1).charValue() : ((Number) arg1).longValue();
-            long val2 = (code2 == CHAR) ? ((Character) arg2).charValue() : ((Number) arg2).longValue();
+            long val1 = (code1 == CHAR) ? ((java.lang.Character) arg1).charValue() : ((java.lang.Number) arg1).longValue();
+            long val2 = (code2 == CHAR) ? ((java.lang.Character) arg2).charValue() : ((java.lang.Number) arg2).longValue();
             return boxToLong(val1 - val2);
         }
         if (maxcode <= FLOAT) {
-            float val1 = (code1 == CHAR) ? ((Character) arg1).charValue() : ((Number) arg1).floatValue();
-            float val2 = (code2 == CHAR) ? ((Character) arg2).charValue() : ((Number) arg2).floatValue();
+            float val1 = (code1 == CHAR) ? ((java.lang.Character) arg1).charValue() : ((java.lang.Number) arg1).floatValue();
+            float val2 = (code2 == CHAR) ? ((java.lang.Character) arg2).charValue() : ((java.lang.Number) arg2).floatValue();
             return boxToFloat(val1 - val2);
         }
         if (maxcode <= DOUBLE) {
-            double val1 = (code1 == CHAR) ? ((Character) arg1).charValue() : ((Number) arg1).doubleValue();
-            double val2 = (code2 == CHAR) ? ((Character) arg2).charValue() : ((Number) arg2).doubleValue();
+            double val1 = (code1 == CHAR) ? ((java.lang.Character) arg1).charValue() : ((java.lang.Number) arg1).doubleValue();
+            double val2 = (code2 == CHAR) ? ((java.lang.Character) arg2).charValue() : ((java.lang.Number) arg2).doubleValue();
             return boxToDouble(val1 - val2);
         }
         throw new NoSuchMethodException();
@@ -323,23 +332,23 @@ public class BoxesRunTime {
         int code2 = typeCode(arg2);
         int maxcode = (code1 < code2) ? code2 : code1;
         if (maxcode <= INT) {
-            int val1 = (code1 == CHAR) ? ((Character) arg1).charValue() : ((Number) arg1).intValue();
-            int val2 = (code2 == CHAR) ? ((Character) arg2).charValue() : ((Number) arg2).intValue();
+            int val1 = (code1 == CHAR) ? ((java.lang.Character) arg1).charValue() : ((java.lang.Number) arg1).intValue();
+            int val2 = (code2 == CHAR) ? ((java.lang.Character) arg2).charValue() : ((java.lang.Number) arg2).intValue();
             return boxToInteger(val1 * val2);
         }
         if (maxcode <= LONG) {
-            long val1 = (code1 == CHAR) ? ((Character) arg1).charValue() : ((Number) arg1).longValue();
-            long val2 = (code2 == CHAR) ? ((Character) arg2).charValue() : ((Number) arg2).longValue();
+            long val1 = (code1 == CHAR) ? ((java.lang.Character) arg1).charValue() : ((java.lang.Number) arg1).longValue();
+            long val2 = (code2 == CHAR) ? ((java.lang.Character) arg2).charValue() : ((java.lang.Number) arg2).longValue();
             return boxToLong(val1 * val2);
         }
         if (maxcode <= FLOAT) {
-            float val1 = (code1 == CHAR) ? ((Character) arg1).charValue() : ((Number) arg1).floatValue();
-            float val2 = (code2 == CHAR) ? ((Character) arg2).charValue() : ((Number) arg2).floatValue();
+            float val1 = (code1 == CHAR) ? ((java.lang.Character) arg1).charValue() : ((java.lang.Number) arg1).floatValue();
+            float val2 = (code2 == CHAR) ? ((java.lang.Character) arg2).charValue() : ((java.lang.Number) arg2).floatValue();
             return boxToFloat(val1 * val2);
         }
         if (maxcode <= DOUBLE) {
-            double val1 = (code1 == CHAR) ? ((Character) arg1).charValue() : ((Number) arg1).doubleValue();
-            double val2 = (code2 == CHAR) ? ((Character) arg2).charValue() : ((Number) arg2).doubleValue();
+            double val1 = (code1 == CHAR) ? ((java.lang.Character) arg1).charValue() : ((java.lang.Number) arg1).doubleValue();
+            double val2 = (code2 == CHAR) ? ((java.lang.Character) arg2).charValue() : ((java.lang.Number) arg2).doubleValue();
             return boxToDouble(val1 * val2);
         }
         throw new NoSuchMethodException();
@@ -351,23 +360,23 @@ public class BoxesRunTime {
         int code2 = typeCode(arg2);
         int maxcode = (code1 < code2) ? code2 : code1;
         if (maxcode <= INT) {
-            int val1 = (code1 == CHAR) ? ((Character) arg1).charValue() : ((Number) arg1).intValue();
-            int val2 = (code2 == CHAR) ? ((Character) arg2).charValue() : ((Number) arg2).intValue();
+            int val1 = (code1 == CHAR) ? ((java.lang.Character) arg1).charValue() : ((java.lang.Number) arg1).intValue();
+            int val2 = (code2 == CHAR) ? ((java.lang.Character) arg2).charValue() : ((java.lang.Number) arg2).intValue();
             return boxToInteger(val1 / val2);
         }
         if (maxcode <= LONG) {
-            long val1 = (code1 == CHAR) ? ((Character) arg1).charValue() : ((Number) arg1).longValue();
-            long val2 = (code2 == CHAR) ? ((Character) arg2).charValue() : ((Number) arg2).longValue();
+            long val1 = (code1 == CHAR) ? ((java.lang.Character) arg1).charValue() : ((java.lang.Number) arg1).longValue();
+            long val2 = (code2 == CHAR) ? ((java.lang.Character) arg2).charValue() : ((java.lang.Number) arg2).longValue();
             return boxToLong(val1 / val2);
         }
         if (maxcode <= FLOAT) {
-            float val1 = (code1 == CHAR) ? ((Character) arg1).charValue() : ((Number) arg1).floatValue();
-            float val2 = (code2 == CHAR) ? ((Character) arg2).charValue() : ((Number) arg2).floatValue();
+            float val1 = (code1 == CHAR) ? ((java.lang.Character) arg1).charValue() : ((java.lang.Number) arg1).floatValue();
+            float val2 = (code2 == CHAR) ? ((java.lang.Character) arg2).charValue() : ((java.lang.Number) arg2).floatValue();
             return boxToFloat(val1 / val2);
         }
         if (maxcode <= DOUBLE) {
-            double val1 = (code1 == CHAR) ? ((Character) arg1).charValue() : ((Number) arg1).doubleValue();
-            double val2 = (code2 == CHAR) ? ((Character) arg2).charValue() : ((Number) arg2).doubleValue();
+            double val1 = (code1 == CHAR) ? ((java.lang.Character) arg1).charValue() : ((java.lang.Number) arg1).doubleValue();
+            double val2 = (code2 == CHAR) ? ((java.lang.Character) arg2).charValue() : ((java.lang.Number) arg2).doubleValue();
             return boxToDouble(val1 / val2);
         }
         throw new NoSuchMethodException();
@@ -379,23 +388,23 @@ public class BoxesRunTime {
         int code2 = typeCode(arg2);
         int maxcode = (code1 < code2) ? code2 : code1;
         if (maxcode <= INT) {
-            int val1 = (code1 == CHAR) ? ((Character) arg1).charValue() : ((Number) arg1).intValue();
-            int val2 = (code2 == CHAR) ? ((Character) arg2).charValue() : ((Number) arg2).intValue();
+            int val1 = (code1 == CHAR) ? ((java.lang.Character) arg1).charValue() : ((java.lang.Number) arg1).intValue();
+            int val2 = (code2 == CHAR) ? ((java.lang.Character) arg2).charValue() : ((java.lang.Number) arg2).intValue();
             return boxToInteger(val1 % val2);
         }
         if (maxcode <= LONG) {
-            long val1 = (code1 == CHAR) ? ((Character) arg1).charValue() : ((Number) arg1).longValue();
-            long val2 = (code2 == CHAR) ? ((Character) arg2).charValue() : ((Number) arg2).longValue();
+            long val1 = (code1 == CHAR) ? ((java.lang.Character) arg1).charValue() : ((java.lang.Number) arg1).longValue();
+            long val2 = (code2 == CHAR) ? ((java.lang.Character) arg2).charValue() : ((java.lang.Number) arg2).longValue();
             return boxToLong(val1 % val2);
         }
         if (maxcode <= FLOAT) {
-            float val1 = (code1 == CHAR) ? ((Character) arg1).charValue() : ((Number) arg1).floatValue();
-            float val2 = (code2 == CHAR) ? ((Character) arg2).charValue() : ((Number) arg2).floatValue();
+            float val1 = (code1 == CHAR) ? ((java.lang.Character) arg1).charValue() : ((java.lang.Number) arg1).floatValue();
+            float val2 = (code2 == CHAR) ? ((java.lang.Character) arg2).charValue() : ((java.lang.Number) arg2).floatValue();
             return boxToFloat(val1 % val2);
         }
         if (maxcode <= DOUBLE) {
-            double val1 = (code1 == CHAR) ? ((Character) arg1).charValue() : ((Number) arg1).doubleValue();
-            double val2 = (code2 == CHAR) ? ((Character) arg2).charValue() : ((Number) arg2).doubleValue();
+            double val1 = (code1 == CHAR) ? ((java.lang.Character) arg1).charValue() : ((java.lang.Number) arg1).doubleValue();
+            double val2 = (code2 == CHAR) ? ((java.lang.Character) arg2).charValue() : ((java.lang.Number) arg2).doubleValue();
             return boxToDouble(val1 % val2);
         }
         throw new NoSuchMethodException();
@@ -406,24 +415,24 @@ public class BoxesRunTime {
         int code1 = typeCode(arg1);
         int code2 = typeCode(arg2);
         if (code1 <= INT) {
-            int val1 = (code1 == CHAR) ? ((Character) arg1).charValue() : ((Number) arg1).intValue();
+            int val1 = (code1 == CHAR) ? ((java.lang.Character) arg1).charValue() : ((java.lang.Number) arg1).intValue();
             if (code2 <= INT) {
-                int val2 = (code2 == CHAR) ? ((Character) arg2).charValue() : ((Number) arg2).intValue();
+                int val2 = (code2 == CHAR) ? ((java.lang.Character) arg2).charValue() : ((java.lang.Number) arg2).intValue();
                 return boxToInteger(val1 >> val2);
             }
             if (code2 <= LONG) {
-                long val2 = (code2 == CHAR) ? ((Character) arg2).charValue() : ((Number) arg2).longValue();
+                long val2 = (code2 == CHAR) ? ((java.lang.Character) arg2).charValue() : ((java.lang.Number) arg2).longValue();
                 return boxToInteger(val1 >> val2);
             }
         }
         if (code1 <= LONG) {
-            long val1 = (code1 == CHAR) ? ((Character) arg1).charValue() : ((Number) arg1).longValue();
+            long val1 = (code1 == CHAR) ? ((java.lang.Character) arg1).charValue() : ((java.lang.Number) arg1).longValue();
             if (code2 <= INT) {
-                int val2 = (code2 == CHAR) ? ((Character) arg2).charValue() : ((Number) arg2).intValue();
+                int val2 = (code2 == CHAR) ? ((java.lang.Character) arg2).charValue() : ((java.lang.Number) arg2).intValue();
                 return boxToLong(val1 >> val2);
             }
             if (code2 <= LONG) {
-                long val2 = (code2 == CHAR) ? ((Character) arg2).charValue() : ((Number) arg2).longValue();
+                long val2 = (code2 == CHAR) ? ((java.lang.Character) arg2).charValue() : ((java.lang.Number) arg2).longValue();
                 return boxToLong(val1 >> val2);
             }
         }
@@ -435,24 +444,24 @@ public class BoxesRunTime {
         int code1 = typeCode(arg1);
         int code2 = typeCode(arg2);
         if (code1 <= INT) {
-            int val1 = (code1 == CHAR) ? ((Character) arg1).charValue() : ((Number) arg1).intValue();
+            int val1 = (code1 == CHAR) ? ((java.lang.Character) arg1).charValue() : ((java.lang.Number) arg1).intValue();
             if (code2 <= INT) {
-                int val2 = (code2 == CHAR) ? ((Character) arg2).charValue() : ((Number) arg2).intValue();
+                int val2 = (code2 == CHAR) ? ((java.lang.Character) arg2).charValue() : ((java.lang.Number) arg2).intValue();
                 return boxToInteger(val1 << val2);
             }
             if (code2 <= LONG) {
-                long val2 = (code2 == CHAR) ? ((Character) arg2).charValue() : ((Number) arg2).longValue();
+                long val2 = (code2 == CHAR) ? ((java.lang.Character) arg2).charValue() : ((java.lang.Number) arg2).longValue();
                 return boxToInteger(val1 << val2);
             }
         }
         if (code1 <= LONG) {
-            long val1 = (code1 == CHAR) ? ((Character) arg1).charValue() : ((Number) arg1).longValue();
+            long val1 = (code1 == CHAR) ? ((java.lang.Character) arg1).charValue() : ((java.lang.Number) arg1).longValue();
             if (code2 <= INT) {
-                int val2 = (code2 == CHAR) ? ((Character) arg2).charValue() : ((Number) arg2).intValue();
+                int val2 = (code2 == CHAR) ? ((java.lang.Character) arg2).charValue() : ((java.lang.Number) arg2).intValue();
                 return boxToLong(val1 << val2);
             }
             if (code2 <= LONG) {
-                long val2 = (code2 == CHAR) ? ((Character) arg2).charValue() : ((Number) arg2).longValue();
+                long val2 = (code2 == CHAR) ? ((java.lang.Character) arg2).charValue() : ((java.lang.Number) arg2).longValue();
                 return boxToLong(val1 << val2);
             }
         }
@@ -464,24 +473,24 @@ public class BoxesRunTime {
         int code1 = typeCode(arg1);
         int code2 = typeCode(arg2);
         if (code1 <= INT) {
-            int val1 = (code1 == CHAR) ? ((Character) arg1).charValue() : ((Number) arg1).intValue();
+            int val1 = (code1 == CHAR) ? ((java.lang.Character) arg1).charValue() : ((java.lang.Number) arg1).intValue();
             if (code2 <= INT) {
-                int val2 = (code2 == CHAR) ? ((Character) arg2).charValue() : ((Number) arg2).intValue();
+                int val2 = (code2 == CHAR) ? ((java.lang.Character) arg2).charValue() : ((java.lang.Number) arg2).intValue();
                 return boxToInteger(val1 >>> val2);
             }
             if (code2 <= LONG) {
-                long val2 = (code2 == CHAR) ? ((Character) arg2).charValue() : ((Number) arg2).longValue();
+                long val2 = (code2 == CHAR) ? ((java.lang.Character) arg2).charValue() : ((java.lang.Number) arg2).longValue();
                 return boxToInteger(val1 >>> val2);
             }
         }
         if (code1 <= LONG) {
-            long val1 = (code1 == CHAR) ? ((Character) arg1).charValue() : ((Number) arg1).longValue();
+            long val1 = (code1 == CHAR) ? ((java.lang.Character) arg1).charValue() : ((java.lang.Number) arg1).longValue();
             if (code2 <= INT) {
-                int val2 = (code2 == CHAR) ? ((Character) arg2).charValue() : ((Number) arg2).intValue();
+                int val2 = (code2 == CHAR) ? ((java.lang.Character) arg2).charValue() : ((java.lang.Number) arg2).intValue();
                 return boxToLong(val1 >>> val2);
             }
             if (code2 <= LONG) {
-                long val2 = (code2 == CHAR) ? ((Character) arg2).charValue() : ((Number) arg2).longValue();
+                long val2 = (code2 == CHAR) ? ((java.lang.Character) arg2).charValue() : ((java.lang.Number) arg2).longValue();
                 return boxToLong(val1 >>> val2);
             }
         }
@@ -492,19 +501,19 @@ public class BoxesRunTime {
     public static Object negate(Object arg) throws NoSuchMethodException {
         int code = typeCode(arg);
         if (code <= INT) {
-            int val = (code == CHAR) ? ((Character) arg).charValue() : ((Number) arg).intValue();
+            int val = (code == CHAR) ? ((java.lang.Character) arg).charValue() : ((java.lang.Number) arg).intValue();
             return boxToInteger(-val);
         }
         if (code <= LONG) {
-            long val = (code == CHAR) ? ((Character) arg).charValue() : ((Number) arg).longValue();
+            long val = (code == CHAR) ? ((java.lang.Character) arg).charValue() : ((java.lang.Number) arg).longValue();
             return boxToLong(-val);
         }
         if (code <= FLOAT) {
-            float val = (code == CHAR) ? ((Character) arg).charValue() : ((Number) arg).floatValue();
+            float val = (code == CHAR) ? ((java.lang.Character) arg).charValue() : ((java.lang.Number) arg).floatValue();
             return boxToFloat(-val);
         }
         if (code <= DOUBLE) {
-            double val = (code == CHAR) ? ((Character) arg).charValue() : ((Number) arg).doubleValue();
+            double val = (code == CHAR) ? ((java.lang.Character) arg).charValue() : ((java.lang.Number) arg).doubleValue();
             return boxToDouble(-val);
         }
         throw new NoSuchMethodException();
@@ -514,19 +523,19 @@ public class BoxesRunTime {
     public static Object positive(Object arg) throws NoSuchMethodException {
         int code = typeCode(arg);
         if (code <= INT) {
-            int val = (code == CHAR) ? ((Character) arg).charValue() : ((Number) arg).intValue();
+            int val = (code == CHAR) ? ((java.lang.Character) arg).charValue() : ((java.lang.Number) arg).intValue();
             return boxToInteger(+val);
         }
         if (code <= LONG) {
-            long val = (code == CHAR) ? ((Character) arg).charValue() : ((Number) arg).longValue();
+            long val = (code == CHAR) ? ((java.lang.Character) arg).charValue() : ((java.lang.Number) arg).longValue();
             return boxToLong(+val);
         }
         if (code <= FLOAT) {
-            float val = (code == CHAR) ? ((Character) arg).charValue() : ((Number) arg).floatValue();
+            float val = (code == CHAR) ? ((java.lang.Character) arg).charValue() : ((java.lang.Number) arg).floatValue();
             return boxToFloat(+val);
         }
         if (code <= DOUBLE) {
-            double val = (code == CHAR) ? ((Character) arg).charValue() : ((Number) arg).doubleValue();
+            double val = (code == CHAR) ? ((java.lang.Character) arg).charValue() : ((java.lang.Number) arg).doubleValue();
             return boxToDouble(+val);
         }
         throw new NoSuchMethodException();
@@ -538,19 +547,19 @@ public class BoxesRunTime {
             if (!((arg1 instanceof Boolean) && (arg2 instanceof Boolean))) {
                 throw new NoSuchMethodException();
             }
-            return boxToBoolean(((Boolean) arg1).booleanValue() & ((Boolean) arg2).booleanValue());
+            return boxToBoolean(((java.lang.Boolean) arg1).booleanValue() & ((java.lang.Boolean) arg2).booleanValue());
         }
         int code1 = typeCode(arg1);
         int code2 = typeCode(arg2);
         int maxcode = (code1 < code2) ? code2 : code1;
         if (maxcode <= INT) {
-            int val1 = (code1 == CHAR) ? ((Character) arg1).charValue() : ((Number) arg1).intValue();
-            int val2 = (code2 == CHAR) ? ((Character) arg2).charValue() : ((Number) arg2).intValue();
+            int val1 = (code1 == CHAR) ? ((java.lang.Character) arg1).charValue() : ((java.lang.Number) arg1).intValue();
+            int val2 = (code2 == CHAR) ? ((java.lang.Character) arg2).charValue() : ((java.lang.Number) arg2).intValue();
             return boxToInteger(val1 & val2);
         }
         if (maxcode <= LONG) {
-            long val1 = (code1 == CHAR) ? ((Character) arg1).charValue() : ((Number) arg1).longValue();
-            long val2 = (code2 == CHAR) ? ((Character) arg2).charValue() : ((Number) arg2).longValue();
+            long val1 = (code1 == CHAR) ? ((java.lang.Character) arg1).charValue() : ((java.lang.Number) arg1).longValue();
+            long val2 = (code2 == CHAR) ? ((java.lang.Character) arg2).charValue() : ((java.lang.Number) arg2).longValue();
             return boxToLong(val1 & val2);
         }
         throw new NoSuchMethodException();
@@ -562,19 +571,19 @@ public class BoxesRunTime {
             if (!((arg1 instanceof Boolean) && (arg2 instanceof Boolean))) {
                 throw new NoSuchMethodException();
             }
-            return boxToBoolean(((Boolean) arg1).booleanValue() | ((Boolean) arg2).booleanValue());
+            return boxToBoolean(((java.lang.Boolean) arg1).booleanValue() | ((java.lang.Boolean) arg2).booleanValue());
         }
         int code1 = typeCode(arg1);
         int code2 = typeCode(arg2);
         int maxcode = (code1 < code2) ? code2 : code1;
         if (maxcode <= INT) {
-            int val1 = (code1 == CHAR) ? ((Character) arg1).charValue() : ((Number) arg1).intValue();
-            int val2 = (code2 == CHAR) ? ((Character) arg2).charValue() : ((Number) arg2).intValue();
+            int val1 = (code1 == CHAR) ? ((java.lang.Character) arg1).charValue() : ((java.lang.Number) arg1).intValue();
+            int val2 = (code2 == CHAR) ? ((java.lang.Character) arg2).charValue() : ((java.lang.Number) arg2).intValue();
             return boxToInteger(val1 | val2);
         }
         if (maxcode <= LONG) {
-            long val1 = (code1 == CHAR) ? ((Character) arg1).charValue() : ((Number) arg1).longValue();
-            long val2 = (code2 == CHAR) ? ((Character) arg2).charValue() : ((Number) arg2).longValue();
+            long val1 = (code1 == CHAR) ? ((java.lang.Character) arg1).charValue() : ((java.lang.Number) arg1).longValue();
+            long val2 = (code2 == CHAR) ? ((java.lang.Character) arg2).charValue() : ((java.lang.Number) arg2).longValue();
             return boxToLong(val1 | val2);
         }
         throw new NoSuchMethodException();
@@ -586,19 +595,19 @@ public class BoxesRunTime {
             if (!((arg1 instanceof Boolean) && (arg2 instanceof Boolean))) {
                 throw new NoSuchMethodException();
             }
-            return boxToBoolean(((Boolean) arg1).booleanValue() ^ ((Boolean) arg2).booleanValue());
+            return boxToBoolean(((java.lang.Boolean) arg1).booleanValue() ^ ((java.lang.Boolean) arg2).booleanValue());
         }
         int code1 = typeCode(arg1);
         int code2 = typeCode(arg2);
         int maxcode = (code1 < code2) ? code2 : code1;
         if (maxcode <= INT) {
-            int val1 = (code1 == CHAR) ? ((Character) arg1).charValue() : ((Number) arg1).intValue();
-            int val2 = (code2 == CHAR) ? ((Character) arg2).charValue() : ((Number) arg2).intValue();
+            int val1 = (code1 == CHAR) ? ((java.lang.Character) arg1).charValue() : ((java.lang.Number) arg1).intValue();
+            int val2 = (code2 == CHAR) ? ((java.lang.Character) arg2).charValue() : ((java.lang.Number) arg2).intValue();
             return boxToInteger(val1 ^ val2);
         }
         if (maxcode <= LONG) {
-            long val1 = (code1 == CHAR) ? ((Character) arg1).charValue() : ((Number) arg1).longValue();
-            long val2 = (code2 == CHAR) ? ((Character) arg2).charValue() : ((Number) arg2).longValue();
+            long val1 = (code1 == CHAR) ? ((java.lang.Character) arg1).charValue() : ((java.lang.Number) arg1).longValue();
+            long val2 = (code2 == CHAR) ? ((java.lang.Character) arg2).charValue() : ((java.lang.Number) arg2).longValue();
             return boxToLong(val1 ^ val2);
         }
         throw new NoSuchMethodException();
@@ -607,7 +616,7 @@ public class BoxesRunTime {
     /** arg1 && arg2 */
     public static Object takeConditionalAnd(Object arg1, Object arg2) throws NoSuchMethodException {
         if ((arg1 instanceof Boolean) && (arg2 instanceof Boolean)) {
-            return boxToBoolean(((Boolean) arg1).booleanValue() && ((Boolean) arg2).booleanValue());
+            return boxToBoolean(((java.lang.Boolean) arg1).booleanValue() && ((java.lang.Boolean) arg2).booleanValue());
         }
         throw new NoSuchMethodException();
     }
@@ -615,7 +624,7 @@ public class BoxesRunTime {
     /** arg1 || arg2 */
     public static Object takeConditionalOr(Object arg1, Object arg2) throws NoSuchMethodException {
         if ((arg1 instanceof Boolean) && (arg2 instanceof Boolean)) {
-            return boxToBoolean(((Boolean) arg1).booleanValue() || ((Boolean) arg2).booleanValue());
+            return boxToBoolean(((java.lang.Boolean) arg1).booleanValue() || ((java.lang.Boolean) arg2).booleanValue());
         }
         throw new NoSuchMethodException();
     }
@@ -624,11 +633,11 @@ public class BoxesRunTime {
     public static Object complement(Object arg) throws NoSuchMethodException {
         int code = typeCode(arg);
         if (code <= INT) {
-            int val = (code == CHAR) ? ((Character) arg).charValue() : ((Number) arg).intValue();
+            int val = (code == CHAR) ? ((java.lang.Character) arg).charValue() : ((java.lang.Number) arg).intValue();
             return boxToInteger(~val);
         }
         if (code <= LONG) {
-            long val = (code == CHAR) ? ((Character) arg).charValue() : ((Number) arg).longValue();
+            long val = (code == CHAR) ? ((java.lang.Character) arg).charValue() : ((java.lang.Number) arg).longValue();
             return boxToLong(~val);
         }
         throw new NoSuchMethodException();
@@ -637,7 +646,7 @@ public class BoxesRunTime {
     /** !arg */
     public static Object takeNot(Object arg) throws NoSuchMethodException {
         if (arg instanceof Boolean) {
-          return boxToBoolean(!((Boolean) arg).booleanValue());
+          return boxToBoolean(!((java.lang.Boolean) arg).booleanValue());
         }
         throw new NoSuchMethodException();
     }
@@ -655,23 +664,23 @@ public class BoxesRunTime {
         int code2 = typeCode(arg2);
         int maxcode = (code1 < code2) ? code2 : code1;
         if (maxcode <= INT) {
-            int val1 = (code1 == CHAR) ? ((Character) arg1).charValue() : ((Number) arg1).intValue();
-            int val2 = (code2 == CHAR) ? ((Character) arg2).charValue() : ((Number) arg2).intValue();
+            int val1 = (code1 == CHAR) ? ((java.lang.Character) arg1).charValue() : ((java.lang.Number) arg1).intValue();
+            int val2 = (code2 == CHAR) ? ((java.lang.Character) arg2).charValue() : ((java.lang.Number) arg2).intValue();
             return boxToBoolean(val1 < val2);
         }
         if (maxcode <= LONG) {
-            long val1 = (code1 == CHAR) ? ((Character) arg1).charValue() : ((Number) arg1).longValue();
-            long val2 = (code2 == CHAR) ? ((Character) arg2).charValue() : ((Number) arg2).longValue();
+            long val1 = (code1 == CHAR) ? ((java.lang.Character) arg1).charValue() : ((java.lang.Number) arg1).longValue();
+            long val2 = (code2 == CHAR) ? ((java.lang.Character) arg2).charValue() : ((java.lang.Number) arg2).longValue();
             return boxToBoolean(val1 < val2);
         }
         if (maxcode <= FLOAT) {
-            float val1 = (code1 == CHAR) ? ((Character) arg1).charValue() : ((Number) arg1).floatValue();
-            float val2 = (code2 == CHAR) ? ((Character) arg2).charValue() : ((Number) arg2).floatValue();
+            float val1 = (code1 == CHAR) ? ((java.lang.Character) arg1).charValue() : ((java.lang.Number) arg1).floatValue();
+            float val2 = (code2 == CHAR) ? ((java.lang.Character) arg2).charValue() : ((java.lang.Number) arg2).floatValue();
             return boxToBoolean(val1 < val2);
         }
         if (maxcode <= DOUBLE) {
-            double val1 = (code1 == CHAR) ? ((Character) arg1).charValue() : ((Number) arg1).doubleValue();
-            double val2 = (code2 == CHAR) ? ((Character) arg2).charValue() : ((Number) arg2).doubleValue();
+            double val1 = (code1 == CHAR) ? ((java.lang.Character) arg1).charValue() : ((java.lang.Number) arg1).doubleValue();
+            double val2 = (code2 == CHAR) ? ((java.lang.Character) arg2).charValue() : ((java.lang.Number) arg2).doubleValue();
             return boxToBoolean(val1 < val2);
         }
         throw new NoSuchMethodException();
@@ -682,23 +691,23 @@ public class BoxesRunTime {
         int code2 = typeCode(arg2);
         int maxcode = (code1 < code2) ? code2 : code1;
         if (maxcode <= INT) {
-            int val1 = (code1 == CHAR) ? ((Character) arg1).charValue() : ((Number) arg1).intValue();
-            int val2 = (code2 == CHAR) ? ((Character) arg2).charValue() : ((Number) arg2).intValue();
+            int val1 = (code1 == CHAR) ? ((java.lang.Character) arg1).charValue() : ((java.lang.Number) arg1).intValue();
+            int val2 = (code2 == CHAR) ? ((java.lang.Character) arg2).charValue() : ((java.lang.Number) arg2).intValue();
             return boxToBoolean(val1 <= val2);
         }
         if (maxcode <= LONG) {
-            long val1 = (code1 == CHAR) ? ((Character) arg1).charValue() : ((Number) arg1).longValue();
-            long val2 = (code2 == CHAR) ? ((Character) arg2).charValue() : ((Number) arg2).longValue();
+            long val1 = (code1 == CHAR) ? ((java.lang.Character) arg1).charValue() : ((java.lang.Number) arg1).longValue();
+            long val2 = (code2 == CHAR) ? ((java.lang.Character) arg2).charValue() : ((java.lang.Number) arg2).longValue();
             return boxToBoolean(val1 <= val2);
         }
         if (maxcode <= FLOAT) {
-            float val1 = (code1 == CHAR) ? ((Character) arg1).charValue() : ((Number) arg1).floatValue();
-            float val2 = (code2 == CHAR) ? ((Character) arg2).charValue() : ((Number) arg2).floatValue();
+            float val1 = (code1 == CHAR) ? ((java.lang.Character) arg1).charValue() : ((java.lang.Number) arg1).floatValue();
+            float val2 = (code2 == CHAR) ? ((java.lang.Character) arg2).charValue() : ((java.lang.Number) arg2).floatValue();
             return boxToBoolean(val1 <= val2);
         }
         if (maxcode <= DOUBLE) {
-            double val1 = (code1 == CHAR) ? ((Character) arg1).charValue() : ((Number) arg1).doubleValue();
-            double val2 = (code2 == CHAR) ? ((Character) arg2).charValue() : ((Number) arg2).doubleValue();
+            double val1 = (code1 == CHAR) ? ((java.lang.Character) arg1).charValue() : ((java.lang.Number) arg1).doubleValue();
+            double val2 = (code2 == CHAR) ? ((java.lang.Character) arg2).charValue() : ((java.lang.Number) arg2).doubleValue();
             return boxToBoolean(val1 <= val2);
         }
         throw new NoSuchMethodException();
@@ -709,23 +718,23 @@ public class BoxesRunTime {
         int code2 = typeCode(arg2);
         int maxcode = (code1 < code2) ? code2 : code1;
         if (maxcode <= INT) {
-            int val1 = (code1 == CHAR) ? ((Character) arg1).charValue() : ((Number) arg1).intValue();
-            int val2 = (code2 == CHAR) ? ((Character) arg2).charValue() : ((Number) arg2).intValue();
+            int val1 = (code1 == CHAR) ? ((java.lang.Character) arg1).charValue() : ((java.lang.Number) arg1).intValue();
+            int val2 = (code2 == CHAR) ? ((java.lang.Character) arg2).charValue() : ((java.lang.Number) arg2).intValue();
             return boxToBoolean(val1 >= val2);
         }
         if (maxcode <= LONG) {
-            long val1 = (code1 == CHAR) ? ((Character) arg1).charValue() : ((Number) arg1).longValue();
-            long val2 = (code2 == CHAR) ? ((Character) arg2).charValue() : ((Number) arg2).longValue();
+            long val1 = (code1 == CHAR) ? ((java.lang.Character) arg1).charValue() : ((java.lang.Number) arg1).longValue();
+            long val2 = (code2 == CHAR) ? ((java.lang.Character) arg2).charValue() : ((java.lang.Number) arg2).longValue();
             return boxToBoolean(val1 >= val2);
         }
         if (maxcode <= FLOAT) {
-            float val1 = (code1 == CHAR) ? ((Character) arg1).charValue() : ((Number) arg1).floatValue();
-            float val2 = (code2 == CHAR) ? ((Character) arg2).charValue() : ((Number) arg2).floatValue();
+            float val1 = (code1 == CHAR) ? ((java.lang.Character) arg1).charValue() : ((java.lang.Number) arg1).floatValue();
+            float val2 = (code2 == CHAR) ? ((java.lang.Character) arg2).charValue() : ((java.lang.Number) arg2).floatValue();
             return boxToBoolean(val1 >= val2);
         }
         if (maxcode <= DOUBLE) {
-            double val1 = (code1 == CHAR) ? ((Character) arg1).charValue() : ((Number) arg1).doubleValue();
-            double val2 = (code2 == CHAR) ? ((Character) arg2).charValue() : ((Number) arg2).doubleValue();
+            double val1 = (code1 == CHAR) ? ((java.lang.Character) arg1).charValue() : ((java.lang.Number) arg1).doubleValue();
+            double val2 = (code2 == CHAR) ? ((java.lang.Character) arg2).charValue() : ((java.lang.Number) arg2).doubleValue();
             return boxToBoolean(val1 >= val2);
         }
         throw new NoSuchMethodException();
@@ -736,109 +745,109 @@ public class BoxesRunTime {
         int code2 = typeCode(arg2);
         int maxcode = (code1 < code2) ? code2 : code1;
         if (maxcode <= INT) {
-            int val1 = (code1 == CHAR) ? ((Character) arg1).charValue() : ((Number) arg1).intValue();
-            int val2 = (code2 == CHAR) ? ((Character) arg2).charValue() : ((Number) arg2).intValue();
+            int val1 = (code1 == CHAR) ? ((java.lang.Character) arg1).charValue() : ((java.lang.Number) arg1).intValue();
+            int val2 = (code2 == CHAR) ? ((java.lang.Character) arg2).charValue() : ((java.lang.Number) arg2).intValue();
             return boxToBoolean(val1 > val2);
         }
         if (maxcode <= LONG) {
-            long val1 = (code1 == CHAR) ? ((Character) arg1).charValue() : ((Number) arg1).longValue();
-            long val2 = (code2 == CHAR) ? ((Character) arg2).charValue() : ((Number) arg2).longValue();
+            long val1 = (code1 == CHAR) ? ((java.lang.Character) arg1).charValue() : ((java.lang.Number) arg1).longValue();
+            long val2 = (code2 == CHAR) ? ((java.lang.Character) arg2).charValue() : ((java.lang.Number) arg2).longValue();
             return boxToBoolean(val1 > val2);
         }
         if (maxcode <= FLOAT) {
-            float val1 = (code1 == CHAR) ? ((Character) arg1).charValue() : ((Number) arg1).floatValue();
-            float val2 = (code2 == CHAR) ? ((Character) arg2).charValue() : ((Number) arg2).floatValue();
+            float val1 = (code1 == CHAR) ? ((java.lang.Character) arg1).charValue() : ((java.lang.Number) arg1).floatValue();
+            float val2 = (code2 == CHAR) ? ((java.lang.Character) arg2).charValue() : ((java.lang.Number) arg2).floatValue();
             return boxToBoolean(val1 > val2);
         }
         if (maxcode <= DOUBLE) {
-            double val1 = (code1 == CHAR) ? ((Character) arg1).charValue() : ((Number) arg1).doubleValue();
-            double val2 = (code2 == CHAR) ? ((Character) arg2).charValue() : ((Number) arg2).doubleValue();
+            double val1 = (code1 == CHAR) ? ((java.lang.Character) arg1).charValue() : ((java.lang.Number) arg1).doubleValue();
+            double val2 = (code2 == CHAR) ? ((java.lang.Character) arg2).charValue() : ((java.lang.Number) arg2).doubleValue();
             return boxToBoolean(val1 > val2);
         }
         throw new NoSuchMethodException();
     }
         
     /** arg.toChar */
-    public static Character toCharacter(Object arg) throws NoSuchMethodException {
-        if (arg instanceof Character) return (Character)arg;
-        if (arg instanceof Byte) return boxToCharacter((char)unboxToByte(arg));
-        if (arg instanceof Short) return boxToCharacter((char)unboxToShort(arg));
-        if (arg instanceof Integer) return boxToCharacter((char)unboxToInt(arg));
-        if (arg instanceof Long) return boxToCharacter((char)unboxToLong(arg));
-        if (arg instanceof Float) return boxToCharacter((char)unboxToFloat(arg));
-        if (arg instanceof Double) return boxToCharacter((char)unboxToDouble(arg));
+    public static java.lang.Character toCharacter(Object arg) throws NoSuchMethodException {
+        if (arg instanceof java.lang.Integer) return boxToCharacter((char)unboxToInt(arg));
+        if (arg instanceof java.lang.Short) return boxToCharacter((char)unboxToShort(arg));
+        if (arg instanceof java.lang.Character) return (java.lang.Character)arg;
+        if (arg instanceof java.lang.Long) return boxToCharacter((char)unboxToLong(arg));
+        if (arg instanceof java.lang.Byte) return boxToCharacter((char)unboxToByte(arg));
+        if (arg instanceof java.lang.Float) return boxToCharacter((char)unboxToFloat(arg));
+        if (arg instanceof java.lang.Double) return boxToCharacter((char)unboxToDouble(arg));
         throw new NoSuchMethodException();
     }
 
     /** arg.toByte */
-    public static Byte toByte(Object arg) throws NoSuchMethodException {
-        if (arg instanceof Character) return boxToByte((byte)unboxToChar(arg));
-        if (arg instanceof Byte) return (Byte)arg;
-        if (arg instanceof Short) return boxToByte((byte)unboxToShort(arg));
-        if (arg instanceof Integer) return boxToByte((byte)unboxToInt(arg));
-        if (arg instanceof Long) return boxToByte((byte)unboxToLong(arg));
-        if (arg instanceof Float) return boxToByte((byte)unboxToFloat(arg));
-        if (arg instanceof Double) return boxToByte((byte)unboxToDouble(arg));
+    public static java.lang.Byte toByte(Object arg) throws NoSuchMethodException {
+        if (arg instanceof java.lang.Integer) return boxToByte((byte)unboxToInt(arg));
+        if (arg instanceof java.lang.Character) return boxToByte((byte)unboxToChar(arg));
+        if (arg instanceof java.lang.Byte) return (java.lang.Byte)arg;
+        if (arg instanceof java.lang.Long) return boxToByte((byte)unboxToLong(arg));
+        if (arg instanceof java.lang.Short) return boxToByte((byte)unboxToShort(arg));
+        if (arg instanceof java.lang.Float) return boxToByte((byte)unboxToFloat(arg));
+        if (arg instanceof java.lang.Double) return boxToByte((byte)unboxToDouble(arg));
         throw new NoSuchMethodException();
     }
 
     /** arg.toShort */
-    public static Short toShort(Object arg) throws NoSuchMethodException {
-        if (arg instanceof Character) return boxToShort((short)unboxToChar(arg));
-        if (arg instanceof Byte) return boxToShort((short)unboxToByte(arg));
-        if (arg instanceof Short) return (Short)arg;
-        if (arg instanceof Integer) return boxToShort((short)unboxToInt(arg));
-        if (arg instanceof Long) return boxToShort((short)unboxToLong(arg));
-        if (arg instanceof Float) return boxToShort((short)unboxToFloat(arg));
-        if (arg instanceof Double) return boxToShort((short)unboxToDouble(arg));
+    public static java.lang.Short toShort(Object arg) throws NoSuchMethodException {
+        if (arg instanceof java.lang.Integer) return boxToShort((short)unboxToInt(arg));
+        if (arg instanceof java.lang.Long) return boxToShort((short)unboxToLong(arg));
+        if (arg instanceof java.lang.Character) return boxToShort((short)unboxToChar(arg));
+        if (arg instanceof java.lang.Byte) return boxToShort((short)unboxToByte(arg));
+        if (arg instanceof java.lang.Short) return (java.lang.Short)arg;
+        if (arg instanceof java.lang.Float) return boxToShort((short)unboxToFloat(arg));
+        if (arg instanceof java.lang.Double) return boxToShort((short)unboxToDouble(arg));
         throw new NoSuchMethodException();
     }
 
     /** arg.toInt */
-    public static Integer toInteger(Object arg) throws NoSuchMethodException {
-        if (arg instanceof Character) return boxToInteger((int)unboxToChar(arg));
-        if (arg instanceof Byte) return boxToInteger((int)unboxToByte(arg));
-        if (arg instanceof Short) return boxToInteger((int)unboxToShort(arg));
-        if (arg instanceof Integer) return (Integer)arg;
-        if (arg instanceof Long) return boxToInteger((int)unboxToLong(arg));
-        if (arg instanceof Float) return boxToInteger((int)unboxToFloat(arg));
-        if (arg instanceof Double) return boxToInteger((int)unboxToDouble(arg));
+    public static java.lang.Integer toInteger(Object arg) throws NoSuchMethodException {
+        if (arg instanceof java.lang.Integer) return (java.lang.Integer)arg;
+        if (arg instanceof java.lang.Long) return boxToInteger((int)unboxToLong(arg));
+        if (arg instanceof java.lang.Double) return boxToInteger((int)unboxToDouble(arg));
+        if (arg instanceof java.lang.Float) return boxToInteger((int)unboxToFloat(arg));
+        if (arg instanceof java.lang.Character) return boxToInteger((int)unboxToChar(arg));
+        if (arg instanceof java.lang.Byte) return boxToInteger((int)unboxToByte(arg));
+        if (arg instanceof java.lang.Short) return boxToInteger((int)unboxToShort(arg));
         throw new NoSuchMethodException();
     }
 
     /** arg.toLong */
-    public static Long toLong(Object arg) throws NoSuchMethodException {
-        if (arg instanceof Character) return boxToLong((long)unboxToChar(arg));
-        if (arg instanceof Byte) return boxToLong((long)unboxToByte(arg));
-        if (arg instanceof Short) return boxToLong((long)unboxToShort(arg));
-        if (arg instanceof Integer) return boxToLong((long)unboxToInt(arg));
-        if (arg instanceof Long) return (Long)arg;
-        if (arg instanceof Float) return boxToLong((long)unboxToFloat(arg));
-        if (arg instanceof Double) return boxToLong((long)unboxToDouble(arg));
+    public static java.lang.Long toLong(Object arg) throws NoSuchMethodException {
+        if (arg instanceof java.lang.Integer) return boxToLong((long)unboxToInt(arg));
+        if (arg instanceof java.lang.Double) return boxToLong((long)unboxToDouble(arg));
+        if (arg instanceof java.lang.Float) return boxToLong((long)unboxToFloat(arg));
+        if (arg instanceof java.lang.Long) return (java.lang.Long)arg;
+        if (arg instanceof java.lang.Character) return boxToLong((long)unboxToChar(arg));
+        if (arg instanceof java.lang.Byte) return boxToLong((long)unboxToByte(arg));
+        if (arg instanceof java.lang.Short) return boxToLong((long)unboxToShort(arg));
         throw new NoSuchMethodException();
     }
 
     /** arg.toFloat */
-    public static Float toFloat(Object arg) throws NoSuchMethodException {
-        if (arg instanceof Character) return boxToFloat((float)unboxToChar(arg));
-        if (arg instanceof Byte) return boxToFloat((float)unboxToByte(arg));
-        if (arg instanceof Short) return boxToFloat((float)unboxToShort(arg));
-        if (arg instanceof Integer) return boxToFloat((float)unboxToInt(arg));
-        if (arg instanceof Long) return boxToFloat((float)unboxToLong(arg));
-        if (arg instanceof Float) return (Float)arg;
-        if (arg instanceof Double) return boxToFloat((float)unboxToDouble(arg));
+    public static java.lang.Float toFloat(Object arg) throws NoSuchMethodException {
+        if (arg instanceof java.lang.Integer) return boxToFloat((float)unboxToInt(arg));
+        if (arg instanceof java.lang.Long) return boxToFloat((float)unboxToLong(arg));
+        if (arg instanceof java.lang.Float) return (java.lang.Float)arg;
+        if (arg instanceof java.lang.Double) return boxToFloat((float)unboxToDouble(arg));
+        if (arg instanceof java.lang.Character) return boxToFloat((float)unboxToChar(arg));
+        if (arg instanceof java.lang.Byte) return boxToFloat((float)unboxToByte(arg));
+        if (arg instanceof java.lang.Short) return boxToFloat((float)unboxToShort(arg));
         throw new NoSuchMethodException();
     }
 
     /** arg.toDouble */
-    public static Double toDouble(Object arg) throws NoSuchMethodException {
-        if (arg instanceof Character) return boxToDouble((double)unboxToChar(arg));
-        if (arg instanceof Byte) return boxToDouble((double)unboxToByte(arg));
-        if (arg instanceof Short) return boxToDouble((double)unboxToShort(arg));
-        if (arg instanceof Integer) return boxToDouble((double)unboxToInt(arg));
-        if (arg instanceof Long) return boxToDouble((double)unboxToLong(arg));
-        if (arg instanceof Float) return boxToDouble((double)unboxToFloat(arg));
-        if (arg instanceof Double) return (Double)arg;
+    public static java.lang.Double toDouble(Object arg) throws NoSuchMethodException {
+        if (arg instanceof java.lang.Integer) return boxToDouble((double)unboxToInt(arg));
+        if (arg instanceof java.lang.Float) return boxToDouble((double)unboxToFloat(arg));
+        if (arg instanceof java.lang.Double) return (java.lang.Double)arg;
+        if (arg instanceof java.lang.Long) return boxToDouble((double)unboxToLong(arg));
+        if (arg instanceof java.lang.Character) return boxToDouble((double)unboxToChar(arg));
+        if (arg instanceof java.lang.Byte) return boxToDouble((double)unboxToByte(arg));
+        if (arg instanceof java.lang.Short) return boxToDouble((double)unboxToShort(arg));
         throw new NoSuchMethodException();
     }
     
